--- a/packages/driver-data/package.json
+++ b/packages/driver-data/package.json
@@ -122,5 +122,10 @@
         }
       ]
     ]
+  },
+  "codegenConfig": {
+    "name": "RNDriverDataSpec",
+    "type": "modules",
+    "jsSrcsDir": "src"
   }
 }
