--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -17,8 +17,7 @@
     "patch-package": "^6.5.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-battery-optimization-check": "^1.0.8"
+    "react-native": "0.70.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
