refactor: rename example app

--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "AwesomeLibraryExample",
-  "displayName": "AwesomeLibraryExample"
+  "name": "DriveKitRNDemoApp",
+  "displayName": "DriveKit RN Demo App"
 }
