--- a/example/ios/DriveKitRNDemoApp.xcodeproj/xcshareddata/xcschemes/DriveKitRNDemoApp.xcscheme
+++ b/example/ios/DriveKitRNDemoApp.xcodeproj/xcshareddata/xcschemes/DriveKitRNDemoApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AwesomeLibraryExample.app"
-               BlueprintName = "AwesomeLibraryExample"
-               ReferencedContainer = "container:AwesomeLibraryExample.xcodeproj">
+               BuildableName = "DriveKitRNDemoApp.app"
+               BlueprintName = "DriveKitRNDemoApp"
+               ReferencedContainer = "container:DriveKitRNDemoApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AwesomeLibraryExampleTests.xctest"
-               BlueprintName = "AwesomeLibraryExampleTests"
-               ReferencedContainer = "container:AwesomeLibraryExample.xcodeproj">
+               BuildableName = "DriveKitRNDemoAppTests.xctest"
+               BlueprintName = "DriveKitRNDemoAppTests"
+               ReferencedContainer = "container:DriveKitRNDemoApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeLibraryExample.app"
-            BlueprintName = "AwesomeLibraryExample"
-            ReferencedContainer = "container:AwesomeLibraryExample.xcodeproj">
+            BuildableName = "DriveKitRNDemoApp.app"
+            BlueprintName = "DriveKitRNDemoApp"
+            ReferencedContainer = "container:DriveKitRNDemoApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeLibraryExample.app"
-            BlueprintName = "AwesomeLibraryExample"
-            ReferencedContainer = "container:AwesomeLibraryExample.xcodeproj">
+            BuildableName = "DriveKitRNDemoApp.app"
+            BlueprintName = "DriveKitRNDemoApp"
+            ReferencedContainer = "container:DriveKitRNDemoApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
