--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'AwesomeLibraryExample' do
+target 'DriveKitRNDemoApp' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -35,7 +35,7 @@ target 'AwesomeLibraryExample' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'AwesomeLibraryExampleTests' do
+  target 'DriveKitRNDemoAppTests' do
     inherit! :complete
     # Pods for testing
   end
