fix: react-native-permissions dependency

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -11,8 +11,8 @@ target 'DriveKitRNDemoApp' do
   flags = get_default_flags()
 
     # RNPermissions
-    permissions_path = '../../node_modules/react-native-permissions/ios'
-    pod 'RNPermissions', :path => '../../node_modules/react-native-permissions'
+    permissions_path = '../node_modules/react-native-permissions/ios'
+    pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
     pod 'Permission-BluetoothPeripheral', :path => "#{permissions_path}/BluetoothPeripheral"
     pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
     pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
