--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -8,8 +8,8 @@
     "skipLibCheck": true,                               /* Skip type checking all .d.ts files. */
     "paths": {
       "@react-native-drivekit/core": ["../packages/core/src/index"],
-      "@react-native-drivekit/trip-analysis": ["../packages/trip-analysis/src/index"],
-      "@react-native-drivekit/driver-data": ["../packages/driver-data/src/index"]
+      // "@react-native-drivekit/trip-analysis": ["../packages/trip-analysis/src/index"],
+      // "@react-native-drivekit/driver-data": ["../packages/driver-data/src/index"]
     },
   }
 }
